removing the horizontal scroll bar

--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,18 @@
     box-sizing: border-box;
     margin:0;
     padding:0;
+    position: relative;
+    overflow-x: hidden;
+    
 }
+
 
 header{
     background-image: url(./images/showcase.jpeg);
     background-position: relative;
     width:100%;
-    min-height: 120vh;
-    background-size: cover;
-    ;
+    min-height: 100vh;
+    background-size: cover;   
 }
 
 
